@@ -1,6 +1,10 @@
+2010-05-12 17:41  rsbivand
+
+	* R/gwr.R: error on non-numeric adapt in gwr
+
 2010-05-11 19:10  rsbivand
 
-	* R/gwr.R: adding quasi-global R2
+	* R/gwr.R, ChangeLog, inst/ChangeLog: adding quasi-global R2
 
 2010-05-11 19:03  rsbivand
 
